# clip-rs

./: Cargo.toml  readme.md
src/: clip.rs  main.rs
